--- a/web-socket/src/main/resources/templates/handler.html
+++ b/web-socket/src/main/resources/templates/handler.html
@@ -1,8 +1,9 @@
 <body>
 <div id="msg"></div>
-<script src="https://cdn.staticfile.org/jquery/1.10.2/jquery.min.js"></script>
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
 <script>
-    var socket = new WebSocket("ws://localhost:8080/websocket/vehicleTrack");
+    var socket = new WebSocket("ws://localhost:9000/websocket/handler");
+
     socket.onopen = function() {
         socket.send("发送数据");
         console.log("数据发送中...");
